--- a/rust_lib/Cargo.toml
+++ b/rust_lib/Cargo.toml
@@ -15,6 +15,10 @@ jni-sys = "*"
 log = "*"
 log-panics="*"
 android_logger = "*"
+futures = "0.3"
+reqwest = { version = "0.11", features = ["json"] }
+tokio = { version = "1", features = ["full"] }
+openssl = { version = "0.10.55", features = ["vendored"] }
 
 [build-dependencies]
 rifgen = "0.1.51"
