--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,6 +79,12 @@ archTriplets.each { arch, target ->
     tasks.create(name: "cargo-build-${arch}", type: Exec, description: "Building core for ${arch}") {
         workingDir rustBasePath
         commandLine 'cargo', 'build', "--target=${target}", '--release'
+        if (arch == 'arm64-v8a') {
+            environment 'AR', 'llvm-ar'
+            environment 'RANLIB', 'llvm-ranlib'
+        } else if (arch == 'armeabi-v7a') {
+            environment 'CC_armv7_linux_androideabi', '/Users/abdulazeez/Library/Android/sdk/ndk/25.2.9519653/toolchains/llvm/prebuilt/darwin-x86_64/bin/armv7a-linux-androideabi21-clang'
+        }
     }
     // Sync shared native dependencies
     tasks.create(name: "sync-rust-deps-${arch}", type: Sync, dependsOn: "cargo-build-${arch}") {
