--- a/rust_lib/Cargo.toml
+++ b/rust_lib/Cargo.toml
@@ -16,7 +16,7 @@ log = "*"
 log-panics="*"
 android_logger = "*"
 futures = "0.3"
-reqwest = { version = "0.11", features = ["json"] }
+reqwest = { version = "0.11", features = ["blocking","json"] }
 tokio = { version = "1", features = ["full"] }
 openssl = { version = "0.10.55", features = ["vendored"] }
 
